---------------------------------------------
.: WSM: BugFix: Fixed minor issues in Invoice Module (WSM-250)
.: WSM: Task: Add input label in customers (WSM-253)
.: WSM: Task: Add input label in promotions (WSM-252)
.: WSM: BugFix: Set malaysia as default country (WSM-253)
.: WSM: Task: Category select all by default when open modify invoice modal (WSM-250)

---------------------------------------------
- 2021-01-01                                -
---------------------------------------------
.: WSM: BugFix: Fixed existing promotion active date and expiry date issue (WSM-252)
.: WSM: BugFix: Fixed promotion active date  validation and lazyload (WSM-250)
.: WSM: Task: Show default price in item type (WSM-254)
.: WSM: BugFix: Update current page in invoice module (WSM-250)
.: WSM: BugFix: Show existing SKU message (WSM-255)

---------------------------------------------
- 2020-12-30                                -
---------------------------------------------
.: WSM: BugFix: Fixed multiselect dropdown jumping issue (WSM-251)
.: WSM: BugFix: Remove Item without moving to uncategoried (WSM-261)

---------------------------------------------
- 2020-12-29                                -
---------------------------------------------
.: WSM: Task: Disable button when start invoice module (WSM-256)
.: WSM: Task: Fixed minor bugs in customer module (WSM-253)
.: WSM: Task: Fixed minor bugs in promotion module (WSM-252)

---------------------------------------------
- 2020-12-27                                -
---------------------------------------------
.: WSM: Task: Style the font weight and adjust invoice size (WSM-250)

---------------------------------------------
- 2020-12-27                                -
---------------------------------------------
.: WSM: Task: Create a status selection column (WSM-258)
.: WSM: Task: Mark order as self-pickup (WSM-257)
.: WSM: Task: Make SKU as optional field (WSM-255)
.: WSM: Task: Rename order to invoice (WSM-250)