@@ -21,7 +21,7 @@
 <ng-template #noItem>
   <ng-container *ngIf="categoryFound; else noCategoryFound">
     <div class="text-center">
-      <h6 class="py-5">No items in the category.</h6>
+      <h6 class="py-5">No item in the category.</h6>
     </div>
   </ng-container>
 </ng-template>
