@@ -115,7 +115,7 @@
                       <div class="input-group-prepend" style="width: 100px">
                         <span>Name</span>
                       </div>
-                      <input class="form-control form-control-sm" tabIndex="1" maxlength="36" placeholder="{{ i == 0 ? 'Blank to set Default - ' : ''}}Colors, Size, Type (e.g. blue, small...)"
+                      <input class="form-control form-control-sm" tabIndex="1" maxlength="36" placeholder="Colors, Size, Type (e.g. blue, small...)"
                         formControlName="name" />
                     </div>
                   </div>
