@@ -32,7 +32,8 @@ export class ModifyMenuItemComponent implements OnInit {
   isTypeFields: boolean;
   currencies = [];
   allProfileItems = [];
-  allTypes = [{ name: 'Normal (default)', incrementType: true, amount: 0 }];
+  allTypes = [];
+  defaultType = { name: 'Normal (default)', incrementType: true, amount: 0 };
   allDescriptionItems = [];
   categories = [];
   environment = environment;
